--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="140sp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@color/colorGray">
         <LinearLayout
             android:layout_width="wrap_content"
@@ -41,7 +42,8 @@
         android:id="@+id/username"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
         android:layout_marginTop="20sp"
 
         android:hint="@string/prompt_email"
@@ -52,9 +54,10 @@
         android:id="@+id/password"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
 
+        android:layout_marginTop="20sp"
 
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
@@ -66,8 +69,11 @@
         android:id="@+id/login"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
+
         android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"
         
         android:layout_gravity="center_horizontal"
         android:enabled="false"
@@ -78,7 +84,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2.5"
         android:src="@drawable/codelco"
         android:backgroundTint="@null"/>
 
