--- a/app/src/main/res/layout/activity_personas.xml
+++ b/app/src/main/res/layout/activity_personas.xml
@@ -44,7 +44,7 @@
                     android:gravity="start">
 
                     <Button
-                        android:id="@+id/btnPersonasBack"
+                        android:id="@+id/button_personas_stras"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginStart="10dp"
@@ -77,7 +77,7 @@
         </androidx.appcompat.widget.Toolbar>
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/edittext_personas_nombre_rut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -101,7 +101,7 @@
             android:layout_marginLeft="20dp">
 
             <Spinner
-                android:id="@+id/spinner_personas"
+                android:id="@+id/spinner_personas_tipo"
                 android:layout_width="0dp"
                 android:layout_height="50sp"
                 android:layout_weight="1"
@@ -111,7 +111,7 @@
                 android:spinnerMode="dropdown" />
 
             <Button
-                android:id="@+id/btn_personas_busqueda"
+                android:id="@+id/button_personas_busqueda"
 
                 android:layout_width="50sp"
                 android:layout_height="50sp"
@@ -122,17 +122,17 @@
         </LinearLayout>
 
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/listview_personas"
             android:layout_width="match_parent"
-            android:layout_height="100sp"
-
+            android:layout_height="match_parent"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/rounded_button_blue">
+            android:layout_marginRight="20dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10.0sp"/>
 
-        </LinearLayout>
 
     </LinearLayout>
 
