--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,9 @@
     <color name="colorOrangeEZPRO">#F46A00</color>
     <color name="colorGray">#8E8E8E</color>
 
-    <color name="colorGreen">#4CAF50</color>
-    <color name="colorYellow">#C9B825</color>
-    <color name="colorRed">#BE2E22</color>
+    <color name="colorGreen">#589C36</color>
+    <color name="colorYellow">#C1BC3F</color>
+    <color name="colorRed">#E35252</color>
 
     <color name="colorWhite">#FFFFFF</color>
 
