--- a/app/src/main/res/layout/activity_personas_detalle.xml
+++ b/app/src/main/res/layout/activity_personas_detalle.xml
@@ -110,27 +110,151 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/rounded_button_blue">
-            <TextView
-                android:id="@+id/textview_personas_detalle_nombre"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/detalle_nombre"
-                android:textColor="@color/colorWhite"
+                android:orientation="horizontal"
                 android:layout_marginTop="15sp"
                 android:layout_marginBottom="15sp"
                 android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"/>
+                android:layout_marginRight="15sp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/imagen"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginStart="15sp">
+
+                    <TextView
+                        android:id="@+id/textview_personas_detalle_nombre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/nombre"
+                        android:textColor="@color/colorWhite" />
+                    <TextView
+                        android:id="@+id/textview_personas_detalle_cargo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cargo"
+                        android:textColor="@color/colorWhite" />
+                    <TextView
+                        android:id="@+id/textview_personas_detalle_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/tipo"
+                        android:textColor="@color/colorWhite" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="15sp"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp">
+
+                <TextView
+                    android:id="@+id/textview_personas_detalle_informacion_escalable"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/informaci_n_escalable"
+                    android:textColor="@color/colorWhite" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/rounded_button_blue">
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginTop="15sp"
+                android:layout_marginBottom="15sp"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
+                android:background="@drawable/rounded_button_red">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="24sp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/documento"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginBottom="15sp"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
+                android:background="@drawable/rounded_button_yellow">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="24sp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/documento"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginBottom="15sp"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
+                android:background="@drawable/rounded_button_green">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="24sp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/documento"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
