--- a/app/src/main/res/layout/listview_row_maquina.xml
+++ b/app/src/main/res/layout/listview_row_maquina.xml
@@ -20,7 +20,7 @@
             android:id="@+id/imageview_maquinas_item"
             android:layout_width="80sp"
             android:layout_height="80sp"
-            android:src="@drawable/imagen"
+            android:src="@drawable/imagen_maquina"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
@@ -74,7 +74,7 @@
     </LinearLayout>
 
     <lecho.lib.hellocharts.view.PieChartView
-        android:id="@+id/chart"
+        android:id="@+id/piechart"
         android:layout_width="80sp"
         android:layout_height="80sp"
         android:layout_marginRight="10dp"
