--- a/app/src/main/res/layout/listview_row_maquina.xml
+++ b/app/src/main/res/layout/listview_row_maquina.xml
@@ -16,15 +16,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageview_maquinas_item"
-            android:layout_width="80sp"
-            android:layout_height="80sp"
-            android:src="@drawable/imagen_maquina"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp">
+
+            <ImageView
+                android:id="@+id/imageview_maquinas_item"
+                android:layout_width="80sp"
+                android:layout_height="80sp"
+                android:src="@drawable/imagen_maquina" />
+
+            <lecho.lib.hellocharts.view.PieChartView
+                android:id="@+id/piechart"
+                android:layout_width="80sp"
+                android:layout_height="80sp"
+                android:layout_marginTop="10dp"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -73,13 +86,7 @@
 
     </LinearLayout>
 
-    <lecho.lib.hellocharts.view.PieChartView
-        android:id="@+id/piechart"
-        android:layout_width="80sp"
-        android:layout_height="80sp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"/>
+
 
 
 </LinearLayout>
