--- a/app/src/main/res/layout/activity_personas_detalle.xml
+++ b/app/src/main/res/layout/activity_personas_detalle.xml
@@ -78,11 +78,14 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/linearlayout_personas_detalle_informacion"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:background="@color/colorOrangeSelected">
+                android:background="@color/colorOrangeSelected"
+                android:clickable="true"
+                android:focusable="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -92,11 +95,14 @@
                     android:layout_marginBottom="15sp"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/linearlayout_personas_detalle_documentos"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:background="@color/colorOrangeUnselected">
+                android:background="@color/colorOrangeUnselected"
+                android:clickable="true"
+                android:focusable="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -108,12 +114,12 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearlayout_personas_detalle_informacion_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/rounded_button_blue">
@@ -182,10 +188,12 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearlayout_personas_detalle_documentos_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
