--- a/app/src/main/res/layout/listview_row_maquina.xml
+++ b/app/src/main/res/layout/listview_row_maquina.xml
@@ -81,6 +81,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/status"
                 android:textColor="@color/colorWhite"/>
+            <TextView
+                android:id="@+id/textview_maquinas_item_ubicacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ltima_ubicaci_n"
+                android:textColor="@color/colorWhite"/>
 
         </LinearLayout>
 
