--- a/app/src/main/res/layout/activity_pod_detalle.xml
+++ b/app/src/main/res/layout/activity_pod_detalle.xml
@@ -73,6 +73,7 @@
         </androidx.appcompat.widget.Toolbar>
 
         <LinearLayout
+            android:id="@+id/linearlayout_pod_detalle_tarea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -142,6 +143,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearlayout_pod_detalle_gestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -175,6 +177,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearlayout_pod_detalle_acciones_de_gestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -214,7 +217,7 @@
                 android:layout_marginLeft="20dp">
 
                 <EditText
-                    android:id="@+id/edittext_pod_tipo"
+                    android:id="@+id/edittext_pod_detalle_tipo"
                     android:layout_width="0dp"
                     android:layout_height="50sp"
                     android:layout_weight="1"/>
