--- a/app/src/main/res/layout/activity_pod.xml
+++ b/app/src/main/res/layout/activity_pod.xml
@@ -56,7 +56,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/gesti_n_de_obras"
+                        android:text="@string/b_squeda_de_tareas"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp" />
