--- a/app/src/main/res/layout/activity_pod_detalle.xml
+++ b/app/src/main/res/layout/activity_pod_detalle.xml
@@ -246,17 +246,21 @@
                     android:textSize="18sp"
                     android:layout_marginTop="20dp"/>
 
-                <Spinner
-                    android:id="@+id/spinner_pod_status"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50sp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="20dp"
-                    android:textColor="@color/colorBlue"
-                    android:background="@color/colorWhite"
-                    android:spinnerMode="dropdown" />
+                    android:background="@color/colorWhite">
+                    <Spinner
+                        android:id="@+id/spinner_pod_detalle_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="50sp"
+                        android:textColor="@color/colorBlue"
+                        android:spinnerMode="dropdown" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -267,18 +271,29 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="20dp">
 
-                    <EditText
-                        android:id="@+id/edittext_pod_detalle_tipo"
+                    <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="50sp"
                         android:layout_weight="1"
-                        android:background="@color/colorWhite"/>
+                        android:layout_marginEnd="20dp">
+                        <EditText
+                            android:id="@+id/edittext_pod_detalle_tipo"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:ems="10"
+                            android:inputType="textPersonName"
+                            android:hint="@string/acci_n"
+                            android:textColorHint="@color/colorBlue"
+                            android:textColor="@color/colorBlue"
+                            android:background="@color/colorWhite"
+                            android:backgroundTint="@color/colorWhite"/>
+
+                    </LinearLayout>
 
                     <Button
                         android:id="@+id/button_pod_anadir"
                         android:layout_width="50sp"
                         android:layout_height="50sp"
-                        android:layout_marginStart="20sp"
                         android:text="@string/plus"
                         android:textColor="@color/colorWhite"
                         android:textSize="30sp"
