--- a/app/src/main/res/layout/activity_pod_detalle_finalizar_tarea.xml
+++ b/app/src/main/res/layout/activity_pod_detalle_finalizar_tarea.xml
@@ -120,6 +120,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.3"
                         android:hint="0"
+                        android:inputType="number"
                         android:textColorHint="@color/colorWhite"
                         android:textSize="18sp"
                         android:textColor="@color/colorWhite" />
