--- a/app/src/main/res/layout/activity_maquinas.xml
+++ b/app/src/main/res/layout/activity_maquinas.xml
@@ -87,7 +87,9 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/colorBlue"/>
+            android:backgroundTint="@color/colorBlue"
+            android:focusable="true"
+            android:focusableInTouchMode="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
