--- a/app/src/main/res/layout/activity_pod.xml
+++ b/app/src/main/res/layout/activity_pod.xml
@@ -85,7 +85,9 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/colorBlue"/>
+            android:backgroundTint="@color/colorBlue"
+            android:focusable="true"
+            android:focusableInTouchMode="true"/>
 
         <Spinner
             android:id="@+id/spinner_pod_especialidad"
