--- a/app/src/main/res/layout/activity_pod_detalle.xml
+++ b/app/src/main/res/layout/activity_pod_detalle.xml
@@ -286,7 +286,9 @@
                             android:textColorHint="@color/colorBlue"
                             android:textColor="@color/colorBlue"
                             android:background="@color/colorWhite"
-                            android:backgroundTint="@color/colorWhite"/>
+                            android:backgroundTint="@color/colorWhite"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"/>
 
                     </LinearLayout>
 
