--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll_login_header"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -83,6 +84,7 @@
         android:background="@drawable/iniciar"/>
 
     <ImageView
+        android:id="@+id/img_login_codelco"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2.5"
